# pantheon-ui

./: .gitignore  LICENSE  README.md  pantheon-ui-spec.md  test
dataset/: .gitignore  generate_dataset.py  invert_dataset.py  push_to_hub.py  pyproject.toml  seed_examples.json  validate_dataset.py
dataset/card/: DECODER.md  README.md
docs/superpowers/plans/: 2026-04-01-pantheon-ui-implementation.md
docs/superpowers/specs/: 2026-04-01-pantheon-ui-design.md
training/: Modelfile  convert_decoder_to_onnx.py  convert_gemma4_gguf.py  convert_gemma4_onnx.py  convert_to_onnx.py  patch_decoder_onnx.py  train_decoder.py  train_gemma4.py  train_pantheon_ui.py
training/card/: README.md
web/: argo.config.mjs  index.html  package-lock.json  package.json  playwright.config.ts
web/demos/: pantheon.demo.ts  pantheon.scenes.json
web/src/: App.jsx  main.jsx  worker.js
web/src/components/: AboutPage.jsx  ChatWindow.jsx  EmojiResponse.jsx  HeroPage.jsx  MessageBubble.jsx  Reconstruction.jsx  StatusBar.jsx  SystemStatus.jsx  ThinkingTrace.jsx
web/src/hooks/: useModel.js
web/src/lib/: constants.js  emoji-utils.js  parse-response.js  think-parser.js
web/src/styles/: pantheon.css
