[project]
name = "pantheon-ui-dataset"
version = "0.1.0"
description = "Dataset generation for Pantheon UI"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "datasets>=3.0.0",
    "huggingface-hub>=0.25.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
